# Gitrep_Scorer

./: .gitignore  README.md  flipkart.py  main.py  pyproject.toml  requirements.txt  topsis.py
